sentiment-k8s-project/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-demo
  labels:
    name: ai-demo
