sentiment-k8s-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api
  namespace: ai-demo
spec:
  type: LoadBalancer
  selector:
    app: sentiment-api
  ports:
    - port: 80
      targetPort: 8080
